scripts/kubernetes/namespace.yaml
---
# Source: finance/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels: 
    app: finance
    version: v1
