scripts/kubernetes/deployment.yaml
---
# Source: finance/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance
  labels: 
    app: finance
    version: v1
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 100
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels: 
      app: finance
      version: v1
  template:
    metadata:
      labels: 
        app: finance
        version: v1
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
      - name: finance
        image: "smaelalvesdoc/express-finance:latest"
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 35
          timeoutSeconds: 30
          failureThreshold: 5
        resources:
          requests:
            memory: "128Mi"
            cpu: 100m
          limits:
            memory: "500Mi"
            cpu: 200m
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          procMount: Default
          readOnlyRootFilesystem: false
          runAsNonRoot: false
