scripts/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-api
  labels:
    app: finance-api
spec:
  replicas: 1
  minReadySeconds: 100
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: finance-api
  template:
    metadata:
      labels:
        app: finance-api
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
      - name: finance-api
        image: ismaelalvesdoc/express-finance
        imagePullPolicy: Always
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 35
          timeoutSeconds: 30
          failureThreshold: 5
        resources:
          requests:
            memory: "128Mi"
            cpu: 100m
          limits:
            memory: "500Mi"
            cpu: 200m
        ports:
        - containerPort: 3000
          name: finance-api-port
