scripts/kubernetes/service.yaml
---
# Source: finance/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance
  namespace: default
spec:
  selector: 
    app: finance
    version: v1
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
  type: NodePort
