scripts/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: finance-api
spec:
  selector:
    app: finance-api
  ports:
  - port: 3000
    nodePort: 31000
    targetPort: finance-api-port
    protocol: TCP
  type: NodePort
